<?xml version="1.0" encoding="utf-8"?>
<!--
  ~             $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
  ~             $                                                   $
  ~             $                       _oo0oo_                     $
  ~             $                      o8888888o                    $
  ~             $                      88" . "88                    $
  ~             $                      (| -_- |)                    $
  ~             $                      0\  =  /0                    $
  ~             $                    ___/`-_-'\___                  $
  ~             $                  .' \\|     |$ '.                 $
  ~             $                 / \\|||  :  |||$ \                $
  ~             $                / _||||| -:- |||||- \              $
  ~             $               |   | \\\  -  $/ |   |              $
  ~             $               | \_|  ''\- -/''  |_/ |             $
  ~             $               \  .-\__  '-'  ___/-. /             $
  ~             $             ___'. .'  /-_._-\  `. .'___           $
  ~             $          ."" '<  `.___\_<|>_/___.' >' "".         $
  ~             $         | | :  `- \`.;`\ _ /`;.`/ - ` : | |       $
  ~             $         \  \ `_.   \_ __\ /__ _/   .-` /  /       $
  ~             $     =====`-.____`.___ \_____/___.-`___.-'=====    $
  ~             $                       `=-_-='                     $
  ~             $     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   $
  ~             $                                                   $
  ~             $          Buddha Bless         Never Bug           $
  ~             $                                                   $
  ~             $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
  ~
  ~  Copyright (C) 2014 The Android Open Source Project
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:summary="@string/pref_location_default"
        android:title="@string/pref_location_label"/>

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_label_metric"
        android:title="@string/pref_units_label"/>

</PreferenceScreen>